src/app/app.scss
.app-layout {
  overflow: hidden;
  display: grid;
  grid-template-columns: 16.5rem 1fr;
  grid-template-rows: 1fr;

  height: 100vh;

  &__sidebar {
    overflow: hidden auto;
    grid-row: 1 / -1;
  }

  &__content {
    overflow: hidden;
    display: grid;
    grid-template-rows: auto 1fr;
  }

  &__main {
    position: relative;
    overflow: hidden auto;
    padding: 0 var(--space-xl);
  }
}

